# internal/routes/contest_routes.go
@@ -11,7 +11,7 @@ func RegisterContestRoutes(rg *gin.RouterGroup) {
 	rg.POST("", middleware.RoleMiddleware(config.OIDCVerifier), handler.CreateContestHandler)
 	rg.GET("", middleware.RoleMiddleware(config.OIDCVerifier, "squares-admin"), handler.GetAllContestsHandler)
 	rg.GET("/user/:username", middleware.RoleMiddleware(config.OIDCVerifier), handler.GetContestsByUserHandler)
-	rg.GET("/:id", middleware.RoleMiddleware(config.OIDCVerifier), handler.GetContestByIDHandler)
+	rg.GET("/:id", handler.GetContestByIDHandler)
 	rg.POST("/square/:id", middleware.RoleMiddleware(config.OIDCVerifier), handler.UpdateSquareHandler)
 	rg.POST("/:id/randomize-labels", middleware.RoleMiddleware(config.OIDCVerifier), handler.RandomizeContestLabelsHandler)
 }
